--- a/soc/arm/atmel_sam0/common/CMakeLists.txt
+++ b/soc/arm/atmel_sam0/common/CMakeLists.txt
@@ -7,6 +7,10 @@ zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAMD20 soc_samd2x.c)
 zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAMD21 soc_samd2x.c)
 zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAMR21 soc_samd2x.c)
 
+zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAML21 system.c)
+zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAML21 clock.c)
+zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAML21 gclk.c)
+
 zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAMD51 soc_samd5x.c)
 zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAME51 soc_samd5x.c)
 zephyr_sources_ifdef(CONFIG_SOC_SERIES_SAME53 soc_samd5x.c)
